cmake_minimum_required(VERSION 3.14)
set(TARGET cmakedemo)
project(${TARGET})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/modules)
aux_source_directory(. TARGET_LIST)
add_subdirectory(src)
add_executable(${TARGET} ${TARGET_LIST})
target_link_libraries(${TARGET} Test)
find_package(libdb_cxx REQUIRED)
if (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES)
    message(STATUS "Found libdb_cxx libraries")
    include_directories(${LIBDB_CXX_INCLUDE_DIR})
    target_link_libraries(${TARGET} ${LIBDB_CXX_LIBRARIES})
endif (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES)

#message(STATUS "1")
#message(WARNING "2")
#message(AUTHOR_WARNING "3")
#message(WARNING "4")
#message(AUTHOR_WARNING "5")
#message(SEND_ERROR "6")
#message(DEPRECATION "8")
#message(FATAL_ERROR "7")
